fixed hero h1 spacing

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ nav.pinned {
     position: relative;
     text-align: center;
     color: white;
-    padding-top: 22rem;
+    padding-top: 20rem;
     z-index: 2;
 }
 
